--- a/app/src/main/res/layout/activity_forgot_password_page.xml
+++ b/app/src/main/res/layout/activity_forgot_password_page.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".pages.LoginPage">
+    tools:context=".pages.ForgotPasswordPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +33,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/topView" />
 
-<!--            logo beeptalk-->
+            <!--            logo beeptalk-->
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="wrap_content"
@@ -51,8 +50,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="48dp"
-                android:text="Already Have an Account?"
-                android:textColor="@android:color/white"
+                android:text="Change your old password?"
+                android:textColor="@color/primaryTextColor"
                 android:textSize="28sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/imageView5"
@@ -65,10 +64,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical">
 
             <EditText
@@ -84,105 +83,18 @@
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="10dp" />
-
-            <EditText
-                android:id="@+id/passwordET"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:minHeight="50dp"
-                android:textSize="15sp" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="15dp" />
-
-            <TextView
-                android:id="@+id/forgotPassTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="3dp"
-                android:paddingBottom="3dp"
-                android:text="Forgot Password?"
-                android:textColor="@color/primaryColor"
-                android:textStyle="bold" />
-
-            <Space
-                android:layout_width="wrap_content"
                 android:layout_height="20dp" />
 
             <Button
-                android:id="@+id/logInBtn"
+                android:id="@+id/sendEmailBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_button"
                 android:includeFontPadding="false"
                 android:minHeight="48dp"
-                android:text="Log in"
+                android:text="Send email"
                 android:textAllCaps="false"
                 android:textSize="15sp" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="10dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Or"
-                android:textColor="@color/primaryColor" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="10dp" />
-
-            <Button
-                android:id="@+id/googleBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/custom_button"
-                android:includeFontPadding="false"
-                android:backgroundTint="@color/primaryTextColor"
-                android:minHeight="48dp"
-                android:drawableLeft="@drawable/googleg_standard_color_18"
-                android:text="Continue with google"
-                android:textAllCaps="false"
-                android:textSize="15sp" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="10dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="3dp"
-                    android:paddingBottom="3dp"
-                    android:text="@string/don_t_have_an_account" />
-
-                <TextView
-                    android:id="@+id/signUpTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="3dp"
-                    android:paddingBottom="3dp"
-                    android:text="@string/sign_up"
-                    android:textColor="@color/primaryColor"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
 
         </LinearLayout>
 
