--- a/app/src/main/res/layout/card_follow_notification.xml
+++ b/app/src/main/res/layout/card_follow_notification.xml
@@ -37,13 +37,13 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/tvUsername"
+            android:id="@+id/unameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/username" />
 
         <TextView
-            android:id="@+id/tvCreatedAt"
+            android:id="@+id/descTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/followers_activity_follow"/>
