--- a/app/src/main/res/layout/activity_comment_detail_page.xml
+++ b/app/src/main/res/layout/activity_comment_detail_page.xml
@@ -51,10 +51,10 @@
                     android:text="@string/username" />
 
                 <TextView
-                    android:id="@+id/tvReply"
+                    android:id="@+id/tvCreatedAt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/reply_to"/>
+                    android:text="@string/created_at"/>
 
             </LinearLayout>
 
