--- a/app/src/main/res/layout/card_like_notification.xml
+++ b/app/src/main/res/layout/card_like_notification.xml
@@ -31,7 +31,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1"
         android:gravity="center_vertical">
@@ -46,7 +46,10 @@
             android:id="@+id/descTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/activities_activity_like"/>
+            android:text="@string/activities_reply"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="2"/>
 
     </LinearLayout>
 
