--- a/app/src/main/res/drawable/bottom_shape.xml
+++ b/app/src/main/res/drawable/bottom_shape.xml
@@ -2,12 +2,12 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:topRightRadius="20dip"
-        android:topLeftRadius="20dip"
-        android:bottomLeftRadius="20dip"
-        android:bottomRightRadius="20dip"
-        />
+<!--    <corners-->
+<!--        android:topRightRadius="20dip"-->
+<!--        android:topLeftRadius="20dip"-->
+<!--        android:bottomLeftRadius="20dip"-->
+<!--        android:bottomRightRadius="20dip"-->
+<!--        />-->
     <padding
         android:bottom="10dp"
         android:left="10dp"
