--- a/app/src/main/res/layout/activity_update_password_page.xml
+++ b/app/src/main/res/layout/activity_update_password_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".pages.ForgotPasswordPage">
+    tools:context=".pages.UpdatePasswordPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="48dp"
-                android:text="@string/change_your_old_password"
+                android:text="@string/update_your_old_password"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="28sp"
                 android:textStyle="bold"
@@ -71,13 +71,24 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/emailET"
+                android:id="@+id/passwordET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:minHeight="50dp"
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/confirmPasswordET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="@string/confirm_password"
+                android:inputType="textPassword"
                 android:minHeight="50dp"
                 android:textSize="15sp" />
 
@@ -86,13 +97,13 @@
                 android:layout_height="20dp" />
 
             <Button
-                android:id="@+id/sendEmailBtn"
+                android:id="@+id/updatePasswordBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_button"
                 android:includeFontPadding="false"
                 android:minHeight="48dp"
-                android:text="@string/send_otp"
+                android:text="@string/update_password"
                 android:textAllCaps="false"
                 android:textSize="15sp" />
 
