--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -23,24 +23,17 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <TextView
-            android:id="@+id/videoTitleTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/videoDescTv"
-            app:layout_constraintLeft_toLeftOf="@id/videoV"
-            android:text="@string/title_of_video"
-            android:textSize="18sp"
-            android:textFontWeight="900"/>
-
-        <TextView
-            android:id="@+id/videoDescTv"
+        <EditText
+            android:id="@+id/videoTitleEt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@id/videoV"
             app:layout_constraintLeft_toLeftOf="@id/videoV"
-            android:text="@string/desc_of_video"
-            android:textSize="12sp" />
+            android:hint="@string/title_of_video"
+            android:textSize="18sp"
+            android:textFontWeight="900"
+            android:inputType="text"
+            android:importantForAutofill="no" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
