--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -37,12 +37,27 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/postBtn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/post_btn"
-        android:layout_margin="10dp"
-        android:layout_gravity="bottom|center" />
+        android:orientation="horizontal"
+        android:layout_gravity="bottom|center"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/chooseBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/choose_btn"
+            android:layout_margin="10dp" />
+
+        <Button
+            android:id="@+id/postBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/post_btn"
+            android:layout_margin="10dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
