--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -33,7 +33,9 @@
             android:textSize="18sp"
             android:textFontWeight="900"
             android:inputType="text"
-            android:importantForAutofill="no" />
+            android:importantForAutofill="no"
+            android:textColor="@color/secondaryTextColor"
+            android:textColorHint="@color/secondaryTextColor"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
