--- a/app/src/main/res/layout/activity_post_video_page.xml
+++ b/app/src/main/res/layout/activity_post_video_page.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@id/videoV"
             app:layout_constraintLeft_toLeftOf="@id/videoV"
-            android:hint="@string/title_of_video"
+            android:hint="@string/input_video_caption"
             android:textSize="18sp"
             android:textFontWeight="900"
             android:inputType="text"
